Update many callouts to use <Tip>, <Note>, and <EnterpriseFeature>

--- a/src/content/basics/devtools/cli.mdx
+++ b/src/content/basics/devtools/cli.mdx
@@ -2,7 +2,11 @@
 title: The Apollo CLI
 ---
 
-> ⚠️ **Important:** All `apollo service:*` commands are now **deprecated** in favor of commands in the [Rover CLI](/rover/).
+<Caution>
+
+All `apollo service:*` commands are now **deprecated** in favor of commands in the [Rover CLI](/rover/).
+
+</Caution>
 
 The **Apollo CLI** provides useful commands for interacting with every component of the Apollo platform, including Apollo Client, Apollo Server, and GraphOS Studio.
 
