--- a/src/content/community/streaming-at-apollo.mdx
+++ b/src/content/community/streaming-at-apollo.mdx
@@ -8,7 +8,11 @@ We're always looking for ways to engage with the Apollo community, and live stre
 
 Currently, we stream on [Twitch](https://twitch.tv/apollographql).
 
-> Want to see us stream on a particular platform? Let us know [on social media](https://twitter.com/apollographql).
+<Note>
+
+Want to see us stream on a particular platform? Let us know [on social media](https://twitter.com/apollographql).
+
+</Note>
 
 ## What we stream
 
@@ -26,7 +30,7 @@ Each Apollo stream presents one of the following shows:
 
 If you want to stay up to date on when we'll be streaming next, you can subscribe to [our calendar](https://go.apollo.dev/events-calendar) or check the [schedule panel on Twitch](https://twitch.tv/apollographql).
 
-<img src="./schedule-panel-twitch.png" alt="Twitch schedule panel" class="screenshot">
+<img src="./schedule-panel-twitch.png" alt="Twitch schedule panel" class="screenshot" />
 
 ## Join us
 
