--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -31,7 +31,7 @@ flowchart LR;
     colorScheme="indigo"
     href="/graphos/quickstart/cloud/"
     style={{
-      marginRight: '10px'
+      marginRight: "10px",
     }}
   >
     Create your first supergraph!
@@ -49,7 +49,11 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 These features (along with many others) are available to organizations on Apollo **Serverless** and **Dedicated** plans:
 
-> [See all Apollo plans.](https://www.apollographql.com/pricing/)
+<Tip>
+
+[See all Apollo plans.](https://www.apollographql.com/pricing/)
+
+</Tip>
 
 - [**Cloud routing.**](./routing/cloud/)
   - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in GraphOS Studio](./metrics/).
@@ -66,7 +70,11 @@ These features (along with many others) are available to organizations on Apollo
 
 ### Enterprise features
 
-> Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials)!
+<Tip>
+
+Test out these features for free with an [Enterprise trial](./org/plans/#enterprise-trials)!
+
+</Tip>
 
 Additional GraphOS features are available to organizations on an **Enterprise** plan:
 
@@ -94,7 +102,7 @@ An Enterprise plan also provides access to our Graph Champions community and a d
   colorScheme="indigo"
   href="/graphos/quickstart/cloud/"
   style={{
-    marginRight: '10px'
+    marginRight: "10px",
   }}
 >
   Get started with GraphOS!
