--- a/src/content/graphos/org/account.mdx
+++ b/src/content/graphos/org/account.mdx
@@ -11,7 +11,11 @@ If you sign up with GitHub, Apollo uses your GitHub identity only for
 login verification purposes. It does not request access to any of your GitHub
 data.
 
-> Single sign-on (SSO) account management via SAML or OIDC is available for [Enterprise customers](https://www.apollographql.com/pricing/).
+<Note>
+
+Single sign-on (SSO) account management via SAML or OIDC is available for [Enterprise customers](https://www.apollographql.com/pricing/).
+
+</Note>
 
 Unless another Studio user has invited you to join an existing organization,
 you will also be asked to [create an organization](./) as part of the signup process.
