--- a/src/content/shared/obtain-personal-api-key.mdx
+++ b/src/content/shared/obtain-personal-api-key.mdx
@@ -1,6 +1,10 @@
 <ExpansionPanel title="How to obtain a personal API key">
 
-> **Personal API keys are secret credentials.** Never share them with others or commit them to version control. Delete and replace API keys that you believe are compromised.
+<Caution>
+
+**Personal API keys are secret credentials.** Never share them with others or commit them to version control. Delete and replace API keys that you believe are compromised.
+
+</Caution>
 
 1. Go to [studio.apollographql.com/user-settings](https://studio.apollographql.com/user-settings).
 
