--- a/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
+++ b/src/content/technotes/TN0020-mocked-gateway-for-client-development.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Mocking graph functionality to unblock client development'
+title: "Mocking graph functionality to unblock client development"
 id: TN0020
 tags: [gateway, schema-design, federation]
 ---
@@ -10,7 +10,11 @@ As your organization builds out its supergraph, you might discover that your cli
 
 To mock parts of your supergraph effectively, both client and backend teams need to agree on the structure of those parts as part of a larger [governance strategy](/enterprise-guide/graph-administration#governance) and approval process. Alignment between these teams on schema additions/removals/changes can help make your schema more useful and expressive.
 
-> We recommended that your backend and client teams align on your schema's structure ahead of time, even if you _don't_ use schema mocking. Doing so enables you to create an expressive schema that accelerates _all_ teams.
+<Note>
+
+We recommended that your backend and client teams align on your schema's structure ahead of time, even if you _don't_ use schema mocking. Doing so enables you to create an expressive schema that accelerates _all_ teams.
+
+</Note>
 
 ### Creating a new schema
 
