--- a/src/content/basics/devtools/apollo-config.mdx
+++ b/src/content/basics/devtools/apollo-config.mdx
@@ -45,7 +45,11 @@ module.exports = {
 };
 ```
 
-> **Note:** you must have a [published schema](/graphos/delivery/publishing-schemas/) for features like VS Code intellisense, which requires knowledge of your schema, to work properly.
+<Note>
+
+You must have a [published schema](/graphos/delivery/publishing-schemas/) for features like VS Code intellisense, which requires knowledge of your schema, to work properly.
+
+</Note>
 
 If you're tracking different versions of your schema in the registry using graph variants, you can link your client to a specific variant like so:
 
