--- a/src/content/basics/resources/faq.mdx
+++ b/src/content/basics/resources/faq.mdx
@@ -12,7 +12,11 @@ You're just getting started with GraphQL. You're learning about syntax, running 
 
 **GraphQL is a language for querying data.** Unlike most query languages (such as SQL), you _don't_ use GraphQL to query a particular type of data store (such as a MySQL database). Instead, **you use GraphQL to query data from any number of different sources.**
 
-> Also check out [this Apollo blog post](https://www.apollographql.com/blog/graphql/basics/what-is-graphql-introduction/).
+<Tip>
+
+Also check out [this Apollo blog post](https://www.apollographql.com/blog/graphql/basics/what-is-graphql-introduction/).
+
+</Tip>
 
 With GraphQL, a client (such as a web app) doesn't need to know which data store contains the information it needs. Instead, clients send queries to your **GraphQL server** (usually over HTTP), which then fetches data from the appropriate data stores.
 
@@ -48,7 +52,11 @@ type Query {
 }
 ```
 
-> Notice that the example query above doesn't fetch the `isbn` field that's defined here. It doesn't need to! GraphQL enables clients to query for exactly the fields they need, with no overhead.
+<Tip>
+
+Notice that the example query above doesn't fetch the `isbn` field that's defined here. It doesn't need to! GraphQL enables clients to query for exactly the fields they need, with no overhead.
+
+</Tip>
 
 Your GraphQL server uses a collection of special functions called [resolvers](/apollo-server/data/resolvers/) that each know how to populate data for a particular schema field by communicating with different data sources (databases, REST APIs, etc.). When a query is fully resolved, your server responds to the client with the result, which matches the query's structure:
 
@@ -94,10 +102,6 @@ GraphQL servers created with Apollo Server can be deployed to any environment th
 There are deployment guides available for:
 
 - [Heroku](/apollo-server/deployment/heroku/)
-
-<!-- TODO(AS4) Insert these links back in once these deployment guides are updated
- - [Lambda](/apollo-server/deployment/lambda/)
-- [Azure Functions](/apollo-server/deployment/azure-functions/) -->
 
 ### How do I connect my client app to my schema?
 
@@ -186,8 +190,6 @@ You have a good understanding of how to write, deploy, and monitor GraphQL in pr
 ### How do I organize schema code to scale for a larger project?
 
 Keeping all schema code together makes sense for smaller projects, but once a project reaches a certain size, or has many people working on it, managing conflicts in the same file and code navigation can get difficult. Splitting types and resolvers up into smaller files can make this process much easier. Read [this blog post](https://blog.apollographql.com/modularizing-your-graphql-schema-code-d7f71d5ed5f2) to learn more.
-
-<!-- TODO: @jakedawkins Add server testing -->
 
 ### How can I test my client?
 
