--- a/src/content/graphos/enterprise/index.mdx
+++ b/src/content/graphos/enterprise/index.mdx
@@ -7,7 +7,11 @@ description: Overview
 
 See the left navigation for a list of all Enterprise-specific articles from across the GraphOS documentation.
 
-> To compare GraphOS feature support across all plan types, see our [pricing page](https://www.apollographql.com/pricing/).
+<Tip>
+
+To compare GraphOS feature support across all plan types, see our [pricing page](https://www.apollographql.com/pricing/).
+
+</Tip>
 
 ## Enterprise trial
 
@@ -19,7 +23,7 @@ You can sign up for a GraphOS Enterprise trial to freely test out _most_ Enterpr
     colorScheme="indigo"
     href="https://studio.apollographql.com/signup?type=enterprise-trial&referrer=docs-content"
     style={{
-      marginRight: '10px'
+      marginRight: "10px",
     }}
   >
     Start an Enterprise trial
@@ -50,7 +54,11 @@ These router instances connect to GraphOS to fetch their managed configuration a
 
 This architecture helps you satisfy sophisticated requirements around data compliance and performance, and it also enables you to further customize your router's behavior with Enterprise-specific functionality (described [below](#apollo-router-features)).
 
-> [Create a self-hosted supergraph.](../quickstart/self-hosted/)
+<Tip>
+
+[Create a self-hosted supergraph.](../quickstart/self-hosted/)
+
+</Tip>
 
 ### Apollo Router features
 
@@ -63,7 +71,11 @@ This architecture helps you satisfy sophisticated requirements around data compl
 - **Custom request handling** in any language via [external coprocessing](/router/customizations/coprocessor/)
 - **Mitigation of potentially malicious requests** via [operation limits](/router/configuration/operation-limits) and [safelisting](../operations/persisted-queries/)
 
-> [Learn more about Enterprise features in the Apollo Router.](/router/enterprise-features/)
+<Tip>
+
+[Learn more about Enterprise features in the Apollo Router.](/router/enterprise-features/)
+
+</Tip>
 
 ## Schema filtering with contracts
 
@@ -103,7 +115,11 @@ graph LR;
 
 Contracts are especially useful if you want to expose a subset of your supergraph as a public API.
 
-> [Learn more about GraphOS contracts.](../delivery/contracts/)
+<Tip>
+
+[Learn more about GraphOS contracts.](../delivery/contracts/)
+
+</Tip>
 
 ## Organization management
 
