--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -6,7 +6,11 @@ description: Configure CORS policies and authentication so the Apollo GraphOS Ex
 
 The Explorer automatically attempts to connect to your GraphQL server at the URL specified in its Settings tab.
 
-> When you use the Explorer with a [cloud supergraph](../graphs/#cloud-supergraphs), the endpoint URL is always the URL of your current variant's GraphOS-managed router.
+<Tip>
+
+When you use the Explorer with a [cloud supergraph](../graphs/#cloud-supergraphs), the endpoint URL is always the URL of your current variant's GraphOS-managed router.
+
+</Tip>
 
 Depending on your GraphQL server's settings, you might need to configure the Explorer's connection to handle CORS requirements or authentication.
 
@@ -25,13 +29,21 @@ Access-Control-Allow-Origin: https://studio.apollographql.com
 Access-Control-Allow-Credentials: true
 ```
 
-> If you can't change your CORS policy, you might be able to create a proxy for your endpoint and point the Explorer to the proxy instead. CORS policies are enforced by browsers, and the proxy won't have the same issues communicating with your endpoint.
+<Note>
+
+If you can't change your CORS policy, you might be able to create a proxy for your endpoint and point the Explorer to the proxy instead. CORS policies are enforced by browsers, and the proxy won't have the same issues communicating with your endpoint.
+
+</Note>
 
 ## Authentication
 
 The Explorer provides features to help you authenticate via [request headers](#request-headers), [cookies](#cookies), and [scripts](#custom-scripts).
 
-> If your graph has authentication requirements that aren't covered by these options, please contact **support@apollographql.com** with questions or feedback.
+<Tip>
+
+If your graph has authentication requirements that aren't covered by these options, please contact **support@apollographql.com** with questions or feedback.
+
+</Tip>
 
 ### Request headers
 
@@ -61,8 +73,7 @@ Once configured, requests sent from `https://studio.apollographql.com` include t
 
 #### Cookies for Safari users
 
-Safari `13.1` and later [blocks third-party cookies by default](https://webkit.org/blog/10218/full-third-party-cookie-blocking-and-more/). When using Explorer in Safari, it considers your server's endpoint to be "third-party" to GraphOS Studio.  Therefore, Safari users need to open **Settings > Privacy** in Safari and uncheck **Prevent cross-site tracking** to send Explorer requests with cookies.
-
+Safari `13.1` and later [blocks third-party cookies by default](https://webkit.org/blog/10218/full-third-party-cookie-blocking-and-more/). When using Explorer in Safari, it considers your server's endpoint to be "third-party" to GraphOS Studio. Therefore, Safari users need to open **Settings > Privacy** in Safari and uncheck **Prevent cross-site tracking** to send Explorer requests with cookies.
 
 ### Environment variables
 
@@ -117,7 +128,7 @@ Inject an environment variable into a GraphQL variable value by surrounding the 
 If you create a [preflight or operation script](./scripting), that script can access an environment variable's value like so:
 
 ```js
-const secretToken = explorer.environment.get('token');
+const secretToken = explorer.environment.get("token");
 ```
 
 Check out the Explorer [scripting docs](./scripting) to learn how you can use preflight scripts for authentication purposes.
