--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -94,11 +94,19 @@ That's it! Your newly saved entry appears in its corresponding collection:
 
 If you've saved the entry to a shared collection, it also appears for other authorized members of your organization.
 
-> After you add multiple operations to a collection, you can **drag and drop** to reorder them within the collection.
+<Tip>
+
+After you add multiple operations to a collection, you can **drag and drop** to reorder them within the collection.
+
+</Tip>
 
 ## Modifying collections and operations
 
-> ⚠️ Non-admin organization members _can't_ edit another team member's shared collection, _unless_ that team member specifically configures the collection to allow this.
+<Caution>
+
+Non-admin organization members _can't_ edit another team member's shared collection, _unless_ that team member specifically configures the collection to allow this.
+
+</Caution>
 
 **To edit a collection's details,** click the **•••** button next to its entry in the list and select **Configure**.
 
@@ -121,7 +129,11 @@ Every **shared** operation collection is automatically visible in the Explorer f
 
 You can also give authorized team members a link directly to a particular shared collection or operation. To do so, click the **•••** button next to any shared collection or operation in the list and select the **Copy link** option.
 
-> Team members must be signed in to Studio to view a linked collection or operation, unless it's a [public collection](#public-collections).
+<Note>
+
+Team members must be signed in to Studio to view a linked collection or operation, unless it's a [public collection](#public-collections).
+
+</Note>
 
 ### Embedding in the README page
 
@@ -146,4 +158,8 @@ These Sandbox collections persist regardless of which GraphQL endpoint you conne
 
 While signed in to Sandbox, you can also access the collections for any graph and variant your account has access to.
 
-> If you _don't_ sign in to Sandbox, operation collections are not available.
+<Note>
+
+If you _don't_ sign in to Sandbox, operation collections are not available.
+
+</Note>
