--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -32,20 +32,19 @@ You can use Sandbox offline and without an Apollo account. You also [embed Sandb
 
 When you open Sandbox, it automatically attempts to connect to a GraphQL server running at `http://localhost:4000`. You can use the box at the top of the Explorer to change this URL to any local or remote GraphQL endpoint that's accessible by your browser:
 
-<img
-  class="screenshot"
-  src="../img/sandbox-url.jpg"
-  alt="Sandbox URL field"
-  width="300"
-/>
+<img class="screenshot" src="../img/sandbox-url.jpg" alt="Sandbox URL field" width="300" />
 
 You can also change the default endpoint by providing a [URL parameter](#url-parameters).
 
-> To try out Sandbox with an example GraphQL API, you can set the URL to:
->
-> ```
-> https://flyby-locations-sub.herokuapp.com/
-> ```
+<Note>
+
+To try out Sandbox with an example GraphQL API, you can set the URL to:
+
+```
+https://flyby-locations-sub.herokuapp.com/
+```
+
+</Note>
 
 ## Schema diffs
 
@@ -53,13 +52,13 @@ If you log in to GraphOS Studio from Sandbox, you can diff your Sandbox schema a
 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Diff** page from the left navigation panel. Then use the dropdown menus to select any accessible organization, graph, and variant to compare against:
 
-<img
-  class="screenshot"
-  src="../img/sandbox-diff.jpg"
-  alt="Schema diff in Sandbox"
-/>
+<img class="screenshot" src="../img/sandbox-diff.jpg" alt="Schema diff in Sandbox" />
 
-> If you're using Sandbox with a subgraph, this diff shows the schema as originally defined, _not_ the generated subgraph schema that includes federation-specific fields (such as `Query._entities`). You can view the generated subgraph schema from the SDL page in Sandbox.
+<Note>
+
+If you're using Sandbox with a subgraph, this diff shows the schema as originally defined, _not_ the generated subgraph schema that includes federation-specific fields (such as `Query._entities`). You can view the generated subgraph schema from the SDL page in Sandbox.
+
+</Note>
 
 In addition to viewing the diff on this page, you can click **Run a Check** in the upper-right to run [schema checks](#schema-checks) against the currently selected variant.
 
@@ -67,25 +66,19 @@ In addition to viewing the diff on this page, you can click **Run a Check** in t
 
 If you log in to GraphOS Studio from Sandbox, you can run [schema checks](../delivery/schema-checks/) between your Sandbox schema and any graph you have access to in the Apollo registry.
 
-> Organization members with the [**Consumer** role](../org/members/#organization-wide-member-roles) cannot run schema checks.
+<Note>
+
+Organization members with the [**Consumer** role](../org/members/#organization-wide-member-roles) cannot run schema checks.
+
+</Note>
 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** page from the left navigation panel:
 
-<img
-  class="screenshot"
-  src="../img/sandbox-checks-select.jpg"
-  alt="Sandbox select variant for checks"
-  width="400"
-/>
+<img class="screenshot" src="../img/sandbox-checks-select.jpg" alt="Sandbox select variant for checks" width="400" />
 
 Select any accessible organization, graph, and variant to check against and click **Run a check**. When the check completes, Sandbox displays a result summary:
 
-<img
-  class="screenshot"
-  src="../img/sandbox-checks-result.jpg"
-  alt="Sandbox checks result"
-  width="400"
-/>
+<img class="screenshot" src="../img/sandbox-checks-result.jpg" alt="Sandbox checks result" width="400" />
 
 To view the result's _full_ details in Studio, click **Go to details**.
 
@@ -117,7 +110,11 @@ You can use Sandbox _without_ an internet connection if you're querying a graph 
 
 Sandbox automatically reconnects whenever your internet connection is restored. When it does, it might display a notification that your GraphOS Studio application version is stale by at least 24 hours. You can click the notification to update _all_ of your browser's open Studio tabs to the latest version.
 
-> This notification indicates only that the GraphOS Studio _UI_ is out of date. Your Studio _data_ is always kept up to date.
+<Note>
+
+This notification indicates only that the GraphOS Studio _UI_ is out of date. Your Studio _data_ is always kept up to date.
+
+</Note>
 
 ## Operation collections in Sandbox
 
@@ -130,7 +127,7 @@ You can provide URL parameters to Sandbox to customize its initial state on page
 The following URL parameters are supported:
 
 | Parameter   | Description                                                                                                                  |
-|-------------|------------------------------------------------------------------------------------------------------------------------------|
+| ----------- | ---------------------------------------------------------------------------------------------------------------------------- |
 | `endpoint`  | The URL of the GraphQL endpoint that Sandbox introspects and sends requests to. The default value is `http://localhost:4000` |
 | `document`  | A GraphQL operation to populate in the Explorer's editor on load.                                                            |
 | `variables` | A serialized JSON object containing initial variable values to populate in the Explorer on load.                             |
@@ -142,22 +139,26 @@ For example, the following URL sets all supported parameters:
 https://studio.apollographql.com/sandbox/explorer?endpoint=http://localhost:4200&document=query hello($name: String!) { hello(name: $name)}&variables={"name": "Sandbox User"}&headers={"Cache-Control": "no-cache"}
 ```
 
-> Note that for readability, the above URL is not URL-encoded. Most browsers automatically encode the URL for you, but it's a best practice to URL-encode parameter values before providing them to a user.
+<Note>
+
+Note that for readability, the above URL is not URL-encoded. Most browsers automatically encode the URL for you, but it's a best practice to URL-encode parameter values before providing them to a user.
+
+</Note>
 
 The example URL above opens Sandbox with the following initial state:
 
 <img
-    class="screenshot"
-    src="../img/sandbox-url-parameters-1.jpg"
-    alt="Sandbox with endpoint, document, and variables pre-populated"
-    width="500"
+  class="screenshot"
+  src="../img/sandbox-url-parameters-1.jpg"
+  alt="Sandbox with endpoint, document, and variables pre-populated"
+  width="500"
 />
 
 <img
-    class="screenshot"
-    src="../img/sandbox-url-parameters-2.jpg"
-    alt="Sandbox with headers pre-populated"
-    width="500"
+  class="screenshot"
+  src="../img/sandbox-url-parameters-2.jpg"
+  alt="Sandbox with headers pre-populated"
+  width="500"
 />
 
 ## Embedding Sandbox
@@ -174,18 +175,13 @@ You can embed Sandbox on your own website. This can be useful for interacting wi
 
    The following dialog appears:
 
-   <img
-     class="screenshot"
-     src="../img/embed-sandbox-modal.jpg"
-     alt="Sandbox embed dialog"
-     width="600"
-   />
+   <img class="screenshot" src="../img/embed-sandbox-modal.jpg" alt="Sandbox embed dialog" width="600" />
 
 3. In the dialog, use the tabs to select the code snippet for your use case:
 
-    * Use **React** for React apps where you can `npm install` the `@apollo/sandbox` package.
-    * Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/sandbox` package.
-    * Use **Built file on CDN** to use Apollo's CDN-hosted embedded Sandbox.
+   - Use **React** for React apps where you can `npm install` the `@apollo/sandbox` package.
+   - Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/sandbox` package.
+   - Use **Built file on CDN** to use Apollo's CDN-hosted embedded Sandbox.
 
 4. Click **Copy** to copy the snippet, then paste it into your html code.
 
@@ -274,6 +270,7 @@ You might want to do this if you need to include specific headers in every reque
 By default, the embedded Sandbox does not show the **Include cookies** toggle in its connection settings.
 
 Set `hideCookieToggle` to `false` to enable users of your embedded Sandbox instance to toggle the **Include cookes** setting.
+
 </td>
 </tr>
 
@@ -290,6 +287,7 @@ Set `hideCookieToggle` to `false` to enable users of your embedded Sandbox insta
 By default, the embedded Sandbox has a URL input box that is editable by users.
 
 Set `endpointIsEditable` to `false` to prevent users of your embedded Sandbox instance from changing the endpoint URL.
+
 </td>
 </tr>
 
@@ -310,6 +308,7 @@ If you pass the `handleRequest` option, this option is ignored.
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
 
 This config option is **deprecated** in favor of using the Sandbox connection settings cookie toggle and setting the default value via `initialState.includeCookies`.
+
 </td>
 </tr>
 
@@ -356,7 +355,6 @@ These are the fields you can include in the `initialState` option you pass to `n
 
 </td>
 <td>
-
 
 Set this value to `true` if you want the Sandbox to pass `{ credentials: 'include' }` for its requests by default.
 
@@ -494,7 +492,7 @@ Example:
 
 ```jsx
 initialState: {
-  pollForSchemaUpdates: false
+  pollForSchemaUpdates: false;
 }
 ```
 
