--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -13,17 +13,17 @@ Every Apollo organization has an associated plan that determines which GraphOS f
 
 You can check your organization's current plan in GraphOS Studio. From your organization's page, go to the **Settings** tab and scroll down to the **Plan and Billing** section:
 
-<img
-  className="screenshot"
-  alt="The Plan and Billing section in GraphOS Studio"
-  src="../img/plan-and-billing.jpg"
-/>
+<img className="screenshot" alt="The Plan and Billing section in GraphOS Studio" src="../img/plan-and-billing.jpg" />
 
 ## Current plans
 
 Apollo offers the following plans to new organizations:
 
-> **These are _brief summaries_ of each plan.** For complete plan details, see the [pricing page](https://apollographql.com/pricing).
+<Note>
+
+**These are _brief summaries_ of each plan.** For complete plan details, see the [pricing page](https://apollographql.com/pricing).
+
+</Note>
 
 | Plan                             | Description                                                                                                                                                                                                                                                                                                                       |
 | -------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -32,15 +32,23 @@ Apollo offers the following plans to new organizations:
 | **Dedicated <br/> (In preview)** | This plan lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It is currently in invite-only preview. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> if you'd like to request access or have any questions. |
 | **Enterprise**                   | The Enterprise plan features self-hosted routing, advanced security and schema delivery features, access control, and more. It does _not_ support cloud supergraphs. It includes negotiable usage rates. You can try out most Enterprise features for free with an [Enterprise trial](#enterprise-trials).                        |
 
-> An Enterprise plan provides access to all GraphOS Enterprise features, our Graph Champions community, and a dedicated support channel for your team to talk with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
->
-> If you're interested in an Enterprise plan, please <TrackableLink href="https://www.apollographql.com/contact-sales" eventName="content_contact_sales">get in touch</TrackableLink>!
+<Tip>
+
+An Enterprise plan provides access to all GraphOS Enterprise features, our Graph Champions community, and a dedicated support channel for your team to talk with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
+
+If you're interested in an Enterprise plan, please <TrackableLink href="https://www.apollographql.com/contact-sales" eventName="content_contact_sales">get in touch</TrackableLink>!
+
+</Tip>
 
 ### Enterprise trials
 
 You can sign up for a GraphOS Enterprise trial to freely test out _most_ [GraphOS Enterprise features](../#enterprise-features) (including [creating a self-hosted supergraph](../quickstart/self-hosted/)) for the duration of the trial period.
 
-> The Enterprise trial period is **28 days**.
+<Note>
+
+The Enterprise trial period is **28 days**.
+
+</Note>
 
 <p>
   <ButtonLink
@@ -88,9 +96,13 @@ You can't access a locked organization from GraphOS Studio, and GraphOS stops se
 
 If you have a non-Enterprise Apollo organization that was created before **4 October 2022**, it's on one of the following legacy plans.
 
-> These plans do _not_ support cloud supergraphs, and they might not support other new GraphOS features moving forward.
->
-> If your organization is on one of these plans, we strongly recommend [upgrading to a current plan](#upgrading-to-a-current-plan).
+<Note>
+
+These plans do _not_ support cloud supergraphs, and they might not support other new GraphOS features moving forward.
+
+If your organization is on one of these plans, we strongly recommend [upgrading to a current plan](#upgrading-to-a-current-plan).
+
+</Note>
 
 | Plan     | Description                                                                                                                                                                                                          |
 | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
