--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -2,7 +2,9 @@
 title: Setting up Apollo SSO with Okta
 ---
 
-> ⚠️ **Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).
+<EnterpriseFeature
+  text={`**Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).** Unlike most Enterprise features, this feature is _not_ available as part of an [Enterprise trial](../plans/#enterprise-trials).`}
+/>
 
 This guide walks through configuring Okta as your Apollo organization's identity provider (IdP) for single sign-on (SSO).
 You can [use Okta's official GraphOS integration](#using-oktas-official-apollo-graphos-integration) (recommended) or create a custom SAML integration (legacy).
@@ -27,11 +29,7 @@ You can use Okta's [Bookmark App integration](#add-apollo-graphos-as-a-bookmark-
 
 1. From your Okta Administrator Dashboard, open the **Applications** view from the left menu. Click **Browse App Catalog**.
 
-   <img
-     src="../../img/sso/okta-browse-catalog.jpg"
-     alt="Okta Application screen"
-     class="screenshot"
-   />
+   <img src="../../img/sso/okta-browse-catalog.jpg" alt="Okta Application screen" class="screenshot" />
 
 2. Search for "Apollo GraphOS." When “Apollo GraphOS Enterprise” appears, click **+ Add integration**.
 3. In the **General Settings** tab that opens, select **Do not display application icon to users**. (You'll [set up a Bookmark App](#add-apollo-graphos-as-a-bookmark-app) instead.) You can optionally change the **Application label** or keep the default "Apollo GraphOS Enterprise" label. Click **Done**.
@@ -86,7 +84,7 @@ The **Create SAML Integration** dialog includes multiple steps:
 
    - **App name**: `Apollo GraphOS`
    - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.jpg) (optional)
-   
+
    <img
      src="../../img/sso/okta-create-saml-integration.jpg"
      alt="Okta create saml integration step"
@@ -105,11 +103,7 @@ The **Create SAML Integration** dialog includes multiple steps:
 
    - **Default RelayState**: `https://pingone.com/1.0/fd76e619-6c0a-461c-912d-418278929d60`
 
-   <img
-     src="../../img/sso/okta-configure-saml.jpg"
-     alt="Okta configure SAML"
-     className="screenshot"
-   />
+   <img src="../../img/sso/okta-configure-saml.jpg" alt="Okta configure SAML" className="screenshot" />
 
 3. Still in the **Configure SAML** step, scroll down to **Attribute Statements**. Set values for the following attributes:
 
@@ -123,7 +117,7 @@ The **Create SAML Integration** dialog includes multiple steps:
      src="../../img/sso/okta-attribute-statements.jpg"
      alt="Okta configure attributes statements"
      className="screenshot"
-   />{' '}
+   />{" "}
 
    Then click **Next**.
 
@@ -131,11 +125,7 @@ The **Create SAML Integration** dialog includes multiple steps:
 
    - Select **I'm an Okta customer adding an internal app**.
 
-   <img
-     src="../../img/sso/okta-feedback.jpg"
-     alt="Okta feedback"
-     className="screenshot"
-   />
+   <img src="../../img/sso/okta-feedback.jpg" alt="Okta feedback" className="screenshot" />
 
    Then click **Finish**.
 
@@ -143,19 +133,11 @@ The **Create SAML Integration** dialog includes multiple steps:
 
 1. From your new SAML integration's details page, scroll down and click **View SAML setup instructions** on the right side:
 
-   <img
-     src="../../img/sso/okta-settings.jpg"
-     alt="Okta settings"
-     className="screenshot"
-   />{' '}
+   <img src="../../img/sso/okta-settings.jpg" alt="Okta settings" className="screenshot" />{" "}
 
 2. In the dialog that appears, copy and paste the contents of the **IDP metadata** textbox into a text file:
 
-   <img
-     src="../../img/sso/okta-idp-metadata.jpg"
-     alt="Okta IdP metadata"
-     className="screenshot"
-   />{' '}
+   <img src="../../img/sso/okta-idp-metadata.jpg" alt="Okta IdP metadata" className="screenshot" />{" "}
 
 3. Send the text file to your Apollo contact. They will complete your SSO setup.
 
