--- a/src/content/shared/disclaimer.mdx
+++ b/src/content/shared/disclaimer.mdx
@@ -1,3 +1,7 @@
-> **The code blocks below use TypeScript by default.** You can use the dropdown menu above each code block to switch to JavaScript.
->
-> If you're using JavaScript, use `.js` and `.jsx` file extensions wherever `.ts` and `.tsx` appear.
+<Note>
+
+**The code blocks below use TypeScript by default.** You can use the dropdown menu above each code block to switch to JavaScript.
+
+If you're using JavaScript, use `.js` and `.jsx` file extensions wherever `.ts` and `.tsx` appear.
+
+</Note>
