--- a/src/content/shared/obtain-graph-api-key.mdx
+++ b/src/content/shared/obtain-graph-api-key.mdx
@@ -1,6 +1,10 @@
 <ExpansionPanel title="How to obtain a graph API key">
 
-> **API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised.
+<Caution>
+
+**API keys are secret credentials.** Never share them outside your organization or commit them to version control. Delete and replace API keys that you believe are compromised.
+
+</Caution>
 
 1. Go to [studio.apollographql.com](https://studio.apollographql.com/?referrer=docs-content) and click the graph you want to obtain an API key for.
 
