--- a/src/content/technotes/TN0011-response-cache-eviction.mdx
+++ b/src/content/technotes/TN0011-response-cache-eviction.mdx
@@ -4,7 +4,11 @@ id: TN0010
 tags: [server, caching, performance]
 ---
 
-> For a runnable example of this cache eviction solution, see the [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo.
+<Tip>
+
+For a runnable example of this cache eviction solution, see the [Response Cache Eviction](https://github.com/apollosolutions/response-cache-eviction) repo.
+
+</Tip>
 
 Apollo Server’s Full Response Cache plugin (`@apollo/server-plugin-response-cache`) caches the results of operations for a period of time (time-to-live or TTL). After that time expires, the results are evicted from the cache, and the server fully resolves the operation the next time a client executes it.
 
@@ -98,15 +102,15 @@ Redis clients currently offer no way to batch delete entries based on a pattern.
 The following snippet is from [the repo mentioned above](https://github.com/apollosolutions/response-cache-eviction):
 
 ```ts
-import {createClient, RedisClientType} from 'redis';
+import { createClient, RedisClientType } from "redis";
 
 const deleteByPrefix = async (prefix: string) => {
-  const client = createClient({url: 'redis://localhost:6379'});
+  const client = createClient({ url: "redis://localhost:6379" });
   await client.connect();
 
   const scanIterator = client.scanIterator({
     MATCH: `keyv:fqc:${prefix}*`,
-    COUNT: 2000
+    COUNT: 2000,
   });
 
   let keys = [];
